[gd_scene load_steps=5 format=3 uid="uid://dffd2c4qqa8hd"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_4huy2"]
[ext_resource type="FontFile" uid="uid://cpklkmrqir6it" path="res://assets/fonts/SpaceMono-Regular.ttf" id="1_q5t2f"]
[ext_resource type="PackedScene" uid="uid://b7w4o6wm43x0t" path="res://UI/pistol_info.tscn" id="3_5f3qd"]
[ext_resource type="PackedScene" uid="uid://c160u8i5fyvwa" path="res://UI/character_info.tscn" id="4_cm4hk"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("player_menu_scene", "upgrade_label", "level_label")]
process_mode = 3
custom_minimum_size = Vector2(1300, 900)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4huy2")
player_menu_scene = NodePath("CharacterInfo")
upgrade_label = NodePath("PanelContainer/MarginContainer/Upgrade Points")
level_label = NodePath("PanelContainer/MarginContainer/Level")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Level" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_q5t2f")
theme_override_font_sizes/font_size = 24
text = "Level: 1
"

[node name="Upgrade Points" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_q5t2f")
theme_override_font_sizes/font_size = 24
text = "Upgrade Points: 0
"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 4

[node name="Player Button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_q5t2f")
theme_override_font_sizes/font_size = 18
text = "Player Stats"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 4

[node name="Pistol Button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_q5t2f")
theme_override_font_sizes/font_size = 18
text = "Pistol"

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 4

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_q5t2f")
theme_override_font_sizes/font_size = 18
disabled = true
text = "Shotgun"

[node name="VBoxContainer4" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 4

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_q5t2f")
theme_override_font_sizes/font_size = 18
disabled = true
text = "Sniper
"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Back"

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Quit
"

[node name="PistolInfo" parent="." instance=ExtResource("3_5f3qd")]
visible = false
layout_mode = 1

[node name="CharacterInfo" parent="." instance=ExtResource("4_cm4hk")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Player Button" to="." method="_on_player_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/Pistol Button" to="." method="_on_pistol_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer2/Quit" to="." method="_on_quit_pressed"]
